aio_labels.py

IsTestFixtureNode.argtypes = [AioNode]
IsBattNode = _libraries['avionics/network/_aio_labels.so'].IsBattNode
IsBattNode.restype = ctypes.c_bool
IsBattNode.argtypes = [AioNode]
IsCmdNode = _libraries['avionics/network/_aio_labels.so'].IsCmdNode
IsCmdNode.restype = ctypes.c_bool
IsCmdNode.argtypes = [AioNode]
IsControllerNode = _libraries['avionics/network/_aio_labels.so'].IsControllerNode
IsControllerNode.restype = ctypes.c_bool
IsControllerNode.argtypes = [AioNode]
IsCoreSwitchNode = _libraries['avionics/network/_aio_labels.so'].IsCoreSwitchNode
IsCoreSwitchNode.restype = ctypes.c_bool
IsCoreSwitchNode.argtypes = [AioNode]
IsDrumNode = _libraries['avionics/network/_aio_labels.so'].IsDrumNode
IsDrumNode.restype = ctypes.c_bool
IsDrumNode.argtypes = [AioNode]
IsDynoMotorNode = _libraries['avionics/network/_aio_labels.so'].IsDynoMotorNode
IsDynoMotorNode.restype = ctypes.c_bool
IsDynoMotorNode.argtypes = [AioNode]
IsEopNode = _libraries['avionics/network/_aio_labels.so'].IsEopNode
IsEopNode.restype = ctypes.c_bool
IsEopNode.argtypes = [AioNode]
IsFlightComputerNode = _libraries['avionics/network/_aio_labels.so'].IsFlightComputerNode
IsFlightComputerNode.restype = ctypes.c_bool
IsFlightComputerNode.argtypes = [AioNode]
IsGpsNode = _libraries['avionics/network/_aio_labels.so'].IsGpsNode
IsGpsNode.restype = ctypes.c_bool
IsGpsNode.argtypes = [AioNode]
IsGroundPowerQ7Node = _libraries['avionics/network/_aio_labels.so'].IsGroundPowerQ7Node
IsGroundPowerQ7Node.restype = ctypes.c_bool
IsGroundPowerQ7Node.argtypes = [AioNode]
IsGroundPowerTms570Node = _libraries['avionics/network/_aio_labels.so'].IsGroundPowerTms570Node
IsGroundPowerTms570Node.restype = ctypes.c_bool
IsGroundPowerTms570Node.argtypes = [AioNode]
IsGsEstimatorNode = _libraries['avionics/network/_aio_labels.so'].IsGsEstimatorNode
IsGsEstimatorNode.restype = ctypes.c_bool
IsGsEstimatorNode.argtypes = [AioNode]
IsJoystickNode = _libraries['avionics/network/_aio_labels.so'].IsJoystickNode
IsJoystickNode.restype = ctypes.c_bool
IsJoystickNode.argtypes = [AioNode]
IsLightNode = _libraries['avionics/network/_aio_labels.so'].IsLightNode
IsLightNode.restype = ctypes.c_bool
IsLightNode.argtypes = [AioNode]
IsLoadcellNodeNode = _libraries['avionics/network/_aio_labels.so'].IsLoadcellNodeNode
IsLoadcellNodeNode.restype = ctypes.c_bool
IsLoadcellNodeNode.argtypes = [AioNode]
IsMotorNode = _libraries['avionics/network/_aio_labels.so'].IsMotorNode
IsMotorNode.restype = ctypes.c_bool
IsMotorNode.argtypes = [AioNode]
IsMvlvNode = _libraries['avionics/network/_aio_labels.so'].IsMvlvNode
IsMvlvNode.restype = ctypes.c_bool
IsMvlvNode.argtypes = [AioNode]
IsOperatorNode = _libraries['avionics/network/_aio_labels.so'].IsOperatorNode
IsOperatorNode.restype = ctypes.c_bool
IsOperatorNode.argtypes = [AioNode]
IsPlatformNode = _libraries['avionics/network/_aio_labels.so'].IsPlatformNode
IsPlatformNode.restype = ctypes.c_bool
IsPlatformNode.argtypes = [AioNode]
IsPlcGs02Node = _libraries['avionics/network/_aio_labels.so'].IsPlcGs02Node
IsPlcGs02Node.restype = ctypes.c_bool
IsPlcGs02Node.argtypes = [AioNode]
IsPlcTophatNode = _libraries['avionics/network/_aio_labels.so'].IsPlcTophatNode
IsPlcTophatNode.restype = ctypes.c_bool
IsPlcTophatNode.argtypes = [AioNode]
IsRecorderQ7Node = _libraries['avionics/network/_aio_labels.so'].IsRecorderQ7Node
IsRecorderQ7Node.restype = ctypes.c_bool
IsRecorderQ7Node.argtypes = [AioNode]
IsRecorderTms570Node = _libraries['avionics/network/_aio_labels.so'].IsRecorderTms570Node
IsRecorderTms570Node.restype = ctypes.c_bool
IsRecorderTms570Node.argtypes = [AioNode]
IsServoNode = _libraries['avionics/network/_aio_labels.so'].IsServoNode
IsServoNode.restype = ctypes.c_bool
IsServoNode.argtypes = [AioNode]
IsShortStackNode = _libraries['avionics/network/_aio_labels.so'].IsShortStackNode
IsShortStackNode.restype = ctypes.c_bool
IsShortStackNode.argtypes = [AioNode]
IsSimulatedJoystickNode = _libraries['avionics/network/_aio_labels.so'].IsSimulatedJoystickNode
IsSimulatedJoystickNode.restype = ctypes.c_bool
IsSimulatedJoystickNode.argtypes = [AioNode]
IsSimulatorNode = _libraries['avionics/network/_aio_labels.so'].IsSimulatorNode
IsSimulatorNode.restype = ctypes.c_bool
IsSimulatorNode.argtypes = [AioNode]
IsTelemetrySnapshotNode = _libraries['avionics/network/_aio_labels.so'].IsTelemetrySnapshotNode
IsTelemetrySnapshotNode.restype = ctypes.c_bool
IsTelemetrySnapshotNode.argtypes = [AioNode]
IsTorqueCellNode = _libraries['avionics/network/_aio_labels.so'].IsTorqueCellNode
IsTorqueCellNode.restype = ctypes.c_bool
IsTorqueCellNode.argtypes = [AioNode]
IsUnknownNode = _libraries['avionics/network/_aio_labels.so'].IsUnknownNode
IsUnknownNode.restype = ctypes.c_bool
IsUnknownNode.argtypes = [AioNode]
IsUwbNode = _libraries['avionics/network/_aio_labels.so'].IsUwbNode
IsUwbNode.restype = ctypes.c_bool
IsUwbNode.argtypes = [AioNode]
IsVisualizerNode = _libraries['avionics/network/_aio_labels.so'].IsVisualizerNode
IsVisualizerNode.restype = ctypes.c_bool
IsVisualizerNode.argtypes = [AioNode]
__all__ = \
    ['SimulatedJoystickLabelToSimulatedJoystickAioNode', 'MotorLabel',
    'kAioNodeDynoMotorSti', 'kUwbD', 'kAioNodeCmdWebmonitor', 'kUwbB',
    'kUwbC', 'GpsAioNodeToGpsLabel', 'kGsEstimatorLabelForceSigned',
    'kMvlvLabelForceSigned', 'kDynoMotorPto', 'IsRemoteCommandNode',
    'kDynoMotorPti', 'kNumServos', 'kAioNodePlcTophat', 'kServoA2',
    'BattAioNodeToBattLabel', 'MvlvLabel', 'kAioNodeGpsBaseStation',
    'kCoreSwitchGsB', 'CmdLabel', 'kCoreSwitchGsA',
    'RecorderTms570Label', 'ServoLabelToString', 'kAioNodeMotorSbo',
    'kGpsBaseStation', 'kAioNodeControllerC', 'kAioNodeControllerB',
    'kAioNodeControllerA', 'kCoreSwitchDynoB', 'kCoreSwitchDynoA',
    'TorqueCellLabel', 'kAioNodeTelemetrySnapshot',
    'kPlatformSensorsA', 'kPlatformSensorsB', 'kAioNodeVisualizer',
    'RecorderQ7LabelToRecorderQ7AioNode', 'IsRecorderTms570Node',
    'kPlcGs02LabelForceSigned', 'IsMvlvNode', 'IsUnknownNode',
    'GsEstimatorLabel', 'kCmdLoggerA', 'kCmdLoggerB',
    'RecorderTms570LabelToString', 'IsEopNode',
    'PlatformLabelToString', 'kAioNodeEopWingB', 'DrumLabel',
    'JoystickLabelToJoystickAioNode', 'kAioNodeGroundPowerTms570A',
    'IsServoNode', 'kOperator', 'LightLabelToLightAioNode',
    'TelemetrySnapshotAioNodeToTelemetrySnapshotLabel',
    'TorqueCellLabelToString', 'c__EA_SimulatedJoystickLabel',
    'kAioNodeRecorderQ7Platform', 'kAioNodeTorqueCell',
    'kAioNodeRecorderTms570Wing', 'GpsLabel', 'IsBattNode',
    'GpsLabelToGpsAioNode', 'kServoR2', 'kAioNodeUnknown',
    'IsOperatorNode', 'kAioNodeServoA8', 'kAioNodeServoA7',
    'kAioNodeServoA5', 'kAioNodeServoA4', 'kAioNodeServoA2',
    'kAioNodeServoA1', 'MvlvAioNodeToMvlvLabel',
    'LoadcellNodeAioNodeToLoadcellNodeLabel', 'kNumPlatforms',
    'UwbAioNodeToUwbLabel', 'kLoadcellNodeStarboardA',
    'kLoadcellNodeStarboardB', 'kNumSimulators',
    'kRecorderQ7Platform', 'kAioNodeRecorderQ7Wing',
    'DrumLabelToDrumAioNode', 'SimulatorLabelToSimulatorAioNode',
    'kAioNodeMotorPbi', 'kAioNodeMotorPbo', 'IsTestFixtureNode',
    'kAioNodeGroundPowerQ7A', 'IsJoystickNode', 'MotorLabelToString',
    'kAioNodeCsA', 'kAioNodeCsB', 'SimulatorLabelToString',
    'kServoR1', 'BattLabelToBattAioNode', 'PlcGs02LabelToString',
    'IsFlightComputerNode', 'IsUwbNode', 'TelemetrySnapshotLabel',
    'kAioNodeLightStbd', 'kAioNodePlcGs02',
    'kCoreSwitchLabelForceSigned', 'JoystickLabelToString',
    'kAioNodeJoystickA', 'c__EA_PlcGs02Label', 'kAioNodeDynoMotorPbo',
    'kAioNodeForceSigned', 'c__EA_VisualizerLabel',
    'kAioNodeDynoMotorPto', 'kAioNodeMotorSbi',
    'DynoMotorLabelToString', 'kEopWingB', 'kAioNodeServoE2',
    'kAioNodeServoE1', 'kAioNodeFcA', 'IsLoadcellNodeNode',
    'RecorderQ7LabelToString', 'IsTms570Node', 'LightLabel',
    'kGpsLabelForceSigned', 'kTelemetrySnapshot', 'kPlcGs02',
    'c__EA_LoadcellNodeLabel', 'kSimulatorLabelForceSigned',
    'MotorAioNodeToMotorLabel', 'ControllerLabelToString',
    'CoreSwitchAioNodeToCoreSwitchLabel', 'kAioNodeOperator',
    'CmdLabelToString', 'kSimulatedJoystick', 'kCmdLabelForceSigned',
    'c__EA_ShortStackLabel', 'JoystickAioNodeToJoystickLabel',
    'c__EA_TorqueCellLabel', 'kAioNodeGsEstimator',
    'VisualizerAioNodeToVisualizerLabel', 'EopAioNodeToEopLabel',
    'kAioNodeMotorPto', 'kAioNodeMotorPti', 'IsSimulatedJoystickNode',
    'DynoMotorAioNodeToDynoMotorLabel',
    'PlatformLabelToPlatformAioNode',
    'kGroundPowerTms570LabelForceSigned', 'AioNode',
    'kNumCoreSwitches', 'ServoLabelToServoAioNode',
    'kNumGroundPowerQ7s', 'c__EA_CmdLabel', 'c__EA_DrumLabel',
    'kVisualizerLabelForceSigned', 'kNumJoysticks',
    'UwbLabelToString', 'kDynoMotorSto', 'kDynoMotorSti',
    'kServoLabelForceSigned',
    'FlightComputerLabelToFlightComputerAioNode',
    'FlightComputerAioNodeToFlightComputerLabel', 'kVisualizer',
    'VisualizerLabelToVisualizerAioNode', 'BattLabel', 'kServoE1',
    'kServoE2', 'GroundPowerTms570Label', 'c__EA_DynoMotorLabel',
    'c__EA_SimulatorLabel', 'PlcTophatLabelToPlcTophatAioNode',
    'kNumTorqueCells', 'IsValidNode', 'c__EA_MotorLabel',
    'GsEstimatorLabelToString', 'kPlcTophat',
    'DrumAioNodeToDrumLabel', 'kNumBatts', 'kGroundPowerQ7A',
    'kDynoMotorSbi', 'kDynoMotorSbo', 'kNumMvlvs',
    'kAioNodeRecorderTms570Platform', 'kShortStackLabelForceSigned',
    'BattLabelToString', 'RecorderTms570AioNodeToRecorderTms570Label',
    'kAioNodeCsDynoA', 'kAioNodeCsDynoB', 'CoreSwitchLabel',
    'kAioNodeLightTailTop', 'kCmdWebmonitor', 'kMvlv', 'kNumDrums',
    'DynoMotorLabel', 'MvlvLabelToMvlvAioNode', 'IsCmdNode',
    'PlcTophatLabelToString', 'kAioNodeLightTailBottom', 'kLightPort',
    'c__EA_UwbLabel', 'JoystickLabel', 'c__EA_EopLabel',
    'MotorLabelToMotorAioNode', 'kUwbA', 'kNumLights', 'kShortStack',
    'ControllerLabel', 'LoadcellNodeLabel',
    'c__EA_FlightComputerLabel',
    'LoadcellNodeLabelToLoadcellNodeAioNode',
    'GroundPowerQ7LabelToGroundPowerQ7AioNode',
    'SimulatorAioNodeToSimulatorLabel',
    'TorqueCellLabelToTorqueCellAioNode',
    'TelemetrySnapshotLabelToString', 'kAioNodeLightPort',
    'SimulatedJoystickAioNodeToSimulatedJoystickLabel', 'kMotorPbi',
    'kServoA4', 'kServoA7', 'c__EA_RecorderQ7Label', 'kServoA1',
    'kMotorPbo', 'kJoystickLabelForceSigned', 'kServoA8',
    'kNumOperators', 'kNumPlcTophats', 'IsGroundPowerTms570Node',
    'kAioNodeServoR2', 'kAioNodeServoR1', 'kLightStbd',
    'c__EA_GsEstimatorLabel', 'c__EA_PlatformLabel', 'kTorqueCell',
    'kRecorderQ7LabelForceSigned', 'PlcTophatAioNodeToPlcTophatLabel',
    'RecorderQ7AioNodeToRecorderQ7Label', 'IsPlatformNode',
    'kAioNodeSimulatedJoystick', 'IsGroundStationNode',
    'kNumFlightComputers', 'c__EA_AioNode', 'kAioNodeShortStack',
    'IsRecorderQ7Node', 'IsDynoMotorNode', 'kMotorLabelForceSigned',
    'kAioNodeMvlv', 'kPlatformLabelForceSigned',
    'TelemetrySnapshotLabelToTelemetrySnapshotAioNode',
    'IsGroundPowerQ7Node', 'CoreSwitchLabelToCoreSwitchAioNode',
    'kNumUwbs', 'GroundPowerQ7Label', 'kEopLabelForceSigned',
    'kNumGsEstimators', 'OperatorLabel', 'kFlightComputerB',
    'kFlightComputerC', 'kFlightComputerA',
    'kAioNodePlatformSensorsB', 'kAioNodePlatformSensorsA',
    'kSimulatedJoystickLabelForceSigned',
    'GroundPowerQ7AioNodeToGroundPowerQ7Label',
    'ShortStackLabelToString', 'kAioNodeCmdLoggerB',
    'kLoadcellNodePortA', 'kLoadcellNodePortB', 'kAioNodeCmdLoggerA',
    'MvlvLabelToString', 'kMotorSti', 'StringToAioNode', 'kMotorSto',
    'DynoMotorLabelToDynoMotorAioNode', 'kNumVisualizers',
    'c__EA_OperatorLabel', 'UwbLabelToUwbAioNode',
    'c__EA_JoystickLabel', 'IsShortStackNode',
    'ShortStackLabelToShortStackAioNode', 'kDrumSensorsA',
    'kDrumSensorsB', 'kNumEops', 'kNumGroundPowerTms570s',
    'kFlightComputerLabelForceSigned', 'kRecorderQ7Wing',
    'c__EA_RecorderTms570Label', 'AioNodeToShortString',
    'PlatformLabel', 'RecorderTms570LabelToRecorderTms570AioNode',
